Elm output in dist dir.

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<title>Main</title>
 	<link rel="stylesheet" href="whatever-you-want.css">
-	<script src="main.js"></script>
+	<script src="dist/main.js"></script>
 </head>
 
 <body>
-	Foo
+	Loading app ...
 	<div id="elm"></div>
 	<script>
 		var app = Elm.Main.init({
