--- a/static/index.html
+++ b/static/index.html
@@ -1,2 +1,2 @@
 <h1>Segmentor</h1>
-<p>Log in with <a href="https://www.strava.com/oauth/authorize">Strava</a>.</p>
+<p>Log in with <a href="/login">Strava</a>.</p>
