Connect frontend and backend.

--- a/static/index.html
+++ b/static/index.html
@@ -1,2 +1,11 @@
-<h1>Segmentor</h1>
-<p>Log in with <a href="/login">Strava</a>.</p>
+<html lang="en">
+
+<head>
+    <script defer="" src="http://localhost:4000/static/js/bundle.js"></script>
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
+</html>
