--- a/static/index-development.html
+++ b/static/index-development.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">Make sure you run <code>npm start</code>.</div>
 </body>
 
 </html>
